@@ -1,7 +1,7 @@
 Document Type: WSE
 item: Global
   Version=5.0
-  Title=wxWindows 2.1.13 Installation
+  Title=wxWindows 2.1.14 Installation
   Flags=00000100
   Split=1420
   Languages=65 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
@@ -47,7 +47,7 @@ item: End Block
 end
 item: Set Variable
   Variable=APPTITLE
-  Value=wxWindows 2.1.13
+  Value=wxWindows 2.1.14
 end
 item: Set Variable
   Variable=GROUP
